# error-reporting-python

./: .buildinfo  .gitattributes  .gitignore  .workflow-patcher.yml  README.md  README.rst  SECURITY.md  dependencies.html  error-codes.json  error_code_config.yml  faq.html  genindex.html  index.html  noxconfig.py  noxfile.py  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: api.doctree  dependencies.doctree  environment.pickle  faq.doctree  index.doctree  tools.doctree
.doctrees/changes/: changelog.doctree  changes_0.1.0.doctree  changes_0.2.0.doctree  changes_0.3.0.doctree  changes_0.4.0.doctree  changes_0.5.0.doctree  unreleased.doctree
.doctrees/developer_guide/: developer_guide.doctree
.doctrees/user_guide/: user_guide.doctree
.github/actions/prepare_poetry_env/: action.yml
.github/workflows/: build-and-publish.yml  check-release-tag.yml  check_setup_py.yaml  checks.yml  fast-tests.yml  gh-pages.yml  matrix-all.yml  matrix-python.yml  merge-gate.yml  pr-merge.yml  pytest.yaml  release.yaml  release_droid_upload_github_release_assets.yml  report.yml  slow-checks.yml
0.5.0/: .buildinfo  api.html  dependencies.html  faq.html  genindex.html  index.html  search.html  tools.html
0.5.0/.doctrees/: api.doctree  dependencies.doctree  environment.pickle  faq.doctree  index.doctree  tools.doctree
0.5.0/.doctrees/changes/: changelog.doctree  changes_0.1.0.doctree  changes_0.2.0.doctree  changes_0.3.0.doctree  changes_0.4.0.doctree  changes_0.5.0.doctree  unreleased.doctree
0.5.0/.doctrees/developer_guide/: developer_guide.doctree
0.5.0/.doctrees/user_guide/: user_guide.doctree
0.5.0/_sources/changes/: changes_0.2.0.md.txt
0.5.0/changes/: changelog.html  changes_0.1.0.html  changes_0.2.0.html  changes_0.3.0.html  changes_0.4.0.html  changes_0.5.0.html  unreleased.html
0.5.0/developer_guide/: developer_guide.html
0.5.0/user_guide/: user_guide.html
1.0.0/: .buildinfo  api.html  dependencies.html  faq.html  genindex.html  index.html  objects.inv  search.html  tools.html
1.0.0/.doctrees/: api.doctree  dependencies.doctree  environment.pickle  faq.doctree  index.doctree  tools.doctree
1.0.0/.doctrees/changes/: changelog.doctree  changes_0.1.0.doctree  changes_0.2.0.doctree  changes_0.3.0.doctree  changes_0.4.0.doctree  changes_0.5.0.doctree  changes_1.0.0.doctree  unreleased.doctree
1.0.0/.doctrees/developer_guide/: developer_guide.doctree
1.0.0/.doctrees/user_guide/: user_guide.doctree
1.0.0/_sources/developer_guide/: developer_guide.rst.txt
1.0.0/changes/: changelog.html  changes_0.1.0.html  changes_0.2.0.html  changes_0.3.0.html  changes_0.4.0.html  changes_0.5.0.html  changes_1.0.0.html  unreleased.html
1.0.0/developer_guide/: developer_guide.html
1.0.0/user_guide/: user_guide.html
_sources/: faq.rst.txt  index.rst.txt
_sources/changes/: unreleased.md.txt
_sources/user_guide/: user_guide.md.txt  user_guide.rst.txt
changes/: changelog.html  changes_0.1.0.html  changes_0.2.0.html  changes_0.3.0.html  changes_0.4.0.html  changes_0.5.0.html  unreleased.html
developer_guide/: developer_guide.html
doc/: conf.py  dependencies.md  dependencies.rst  design.rst  index.rst  tools.rst
doc/changes/: changelog.md  changes_0.1.0.md  changes_0.2.0.md  changes_0.4.0.md  changes_0.5.0.md  changes_1.0.0.md  changes_1.1.0.md  unreleased.md
doc/developer_guide/: developer_guide.rst
doc/user_guide/: user_guide.md  user_guide.rst
exasol/error/: __init__.py  __main__.py  _cli.py  _error.py  _error_message_builder.py  _exa_error.py  _internal_errors.py  _metadata.py  _parameters_mapper.py  _parse.py  _placeholder.py  _placeholder_handler.py  _report.py  error_message_builder.py  exa_error.py  parameters_mapper.py  placeholder_handler.py  version.py
exasol_error_reporting_python/: __init__.py  error_message_builder.py  exa_error.py  parameters_mapper.py  placeholder.py  placeholder_handler.py
main/: .buildinfo  api.html  dependencies.html  faq.html  genindex.html  index.html  search.html  searchindex.js  tools.html
main/.doctrees/: api.doctree  dependencies.doctree  environment.pickle  faq.doctree  index.doctree  tools.doctree
main/.doctrees/changes/: changelog.doctree  changes_0.1.0.doctree  changes_0.2.0.doctree  changes_0.3.0.doctree  changes_0.4.0.doctree  changes_0.5.0.doctree  changes_1.0.0.doctree  unreleased.doctree
main/_sources/: dependencies.rst.txt
main/_sources/changes/: unreleased.md.txt  (+2 more)
main/changes/: changelog.html  changes_0.1.0.html  changes_0.2.0.html  changes_0.3.0.html  changes_0.4.0.html  changes_0.5.0.html  changes_1.0.0.html  unreleased.html
main/developer_guide/: developer_guide.html
main/user_guide/: user_guide.html
test/integration/: cli_integration_test.py  generate-subcommand.t  parse-subcommand.t
test/unit/: cli_test.py  error_test.py  fmt_test.py  named_parameters_test.py  parse_test.py  regression_test.py
tests/: test_error_code_format.py  test_error_message_builder.py  test_error_reporting_python.py  test_exa_error.py
user_guide/: user_guide.html
(+5 files in other folders)
