[tool.poetry]
name = "exasol-error-reporting"
packages  = [
    {include = "exasol"},
    {include = "exasol_error_reporting_python"}
]
version = "0.4.0"
description = "Exasol Python Error Reporting"
license = "MIT"

authors = [
    "Umit Buyuksahin <umit.buyuksahin@exasol.com>",
    "Torsten Kilias <torsten.kilias@exasol.com>",
    "Nicola Coretti <nicola.coretti@exasol.com>"
]


readme = 'README.md'

repository = "https://github.com/exasol/error-reporting-python"
homepage = "https://github.com/exasol/error-reporting-python"

keywords = ['exasol', 'python', 'error-reporting']


[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.2,<9"
prysk = {extras = ["pytest-plugin"], version = ">=0.15.1"}
exasol-toolbox = ">=0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ec = 'exasol.error._cli:main'


[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 65


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 7.0

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800


[[tool.mypy.overrides]]
module = [
    "exasol.toolbox.sphinx.multiversion.*",
    "test.unit.*",
    "test.integration.*",
]
ignore_errors = true
