[project]
name = "exasol-error-reporting"
version = "1.0.0"
requires-python = ">=3.9.0,<4.0"
description = "Exasol Python Error Reporting"
authors = [
    {name="Umit Buyuksahin", email="umit.buyuksahin@exasol.com"},
    {name="Torsten Kilias", email="torsten.kilias@exasol.com"},
    {name="Nicola Coretti", email="nicola.coretti@exasol.com"},
]
license = "MIT"
readme = 'README.md'
keywords = ['exasol', 'python', 'error-reporting']

[project.urls]
repository = "https://github.com/exasol/error-reporting-python"
homepage = "https://github.com/exasol/error-reporting-python"

[tool.poetry]
requires-poetry = ">=2.1.0"
packages  = [
    {include = "exasol"}
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.1.2,<9"
prysk = {extras = ["pytest-plugin"], version = ">=0.15.1"}
exasol-toolbox = ">=1.1.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ec = 'exasol.error._cli:main'


[tool.coverage.run]
relative_files = true
source = [
    "exasol"
]

[tool.coverage.report]
fail_under = 65


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"


[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 7.0

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800


[[tool.mypy.overrides]]
module = [
    "noxfile",
    "noxconfig",
    "test.unit.*",
    "test.integration.*",
]
ignore_errors = true
