[project]
name = "exasol-error-reporting"
version = "1.1.0"
description = "Exasol Python Error Reporting"
authors = [
    { name = "Umit Buyuksahin", email = "umit.buyuksahin@exasol.com" },
    { name = "Torsten Kilias", email = "torsten.kilias@exasol.com" },
    { name = "Nicola Coretti", email = "nicola.coretti@exasol.com" },
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
keywords = [
    "exasol",
    "python",
    "error-reporting",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
repository = "https://github.com/exasol/error-reporting-python"
homepage = "https://github.com/exasol/error-reporting-python"

[project.scripts]
ec = "exasol.error._cli:main"

[dependency-groups]
dev = [
    "pytest>=7.1.2,<10",
    "prysk[pytest-plugin]>=0.15.1",
    "exasol-toolbox>=7, <8",
]

[tool.poetry]
requires-poetry = ">=2.3.0"
packages  = [
    {include = "exasol"}
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
relative_files = true
source = [
    "exasol"
]

[tool.coverage.report]
fail_under = 65


[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"
target-version = ["py310"]

[tool.isort]
profile = "black"
force_grid_wrap = 2


[tool.pylint.master]
fail-under = 7.0

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[[tool.mypy.overrides]]
module = [
    "test.unit.*",
    "test.integration.*",
]
ignore_errors = true

[tool.ruff.lint]
extend-ignore = [
    "E",      # Syntax errors
    "F",      # Pyflakes rules (excluding F401)
    "UP",     # pyupgrade rules
    "D",      # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[tool.sonar]
projectKey = "com.exasol:error-reporting-python"
host.url = "https://sonarcloud.io"
organization = "exasol"
